force-app/main/default/objects/Messaging_History__c/Messaging_History__c.object-meta.xml
<CustomObject>
    <label>inwise Messaging History</label>
    <nameField>
        <displayFormat>Messaging -{0000}</displayFormat>
        <label>Messaging History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>inwise Messaging History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>