force-app/main/default/objects/Messaging_History__c/fields/Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Type__c</fullName>
    <label>Channel Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>