force-app/main/default/objects/Messaging_History__c/fields/Read__c.field-meta.xml
<CustomField>
    <fullName>Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Read</label>
    <type>Checkbox</type>
</CustomField>