force-app/main/default/objects/Messaging_History__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <length>80</length>
    <type>Text</type>
</CustomField>