force-app/main/default/objects/Messaging_History__c/fields/To_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sent to</label>
    <type>Phone</type>
</CustomField>